# JAX-Toolbox

./: .dockerignore  .gitignore  .npmrc  .pre-commit-config.yaml  Makefile  README.md  package-lock.json  package.json
.github/: copy-pr-bot.yaml
.github/container/cutlass_dsl_jax/: README.md  pyproject.toml
.github/container/cutlass_dsl_jax/jax_cutlass/: primitive.py  types.py  version.py
.github/container/cutlass_dsl_jax/src/jax_cutlass/: __init__.py  compile.py  primitive.py  types.py  version.py
.github/container/cutlass_dsl_jax/tests/: benchmark.py  conftest.py  tensor.py  test_args.py  test_misc.py  test_sharding.py  test_stream.py  test_streams.py
.github/container/cutlass_dsl_jax/tests/blackwell/: test_block_scaled_gemm.py  test_gemm.py  test_grouped_gemm.py
.github/container/jax_nsys/: Analysis.ipynb  MANIFEST.in  install-protoc  install.sh  nsys-jax-ensure-protobuf  pyproject.toml
.github/container/jax_nsys/jax_nsys/: analysis.py  visualization.py
.github/container/jax_nsys/jax_nsys/analysis/: Analysis.ipynb  summary.py
.github/container/jax_nsys/jax_nsys/scripts/: nsys_jax.py  nsys_jax_combine.py  patch_nsys.py  utils.py
.github/container/jax_nsys/python/jax_nsys/: pyproject.toml
.github/container/jax_nsys/python/jax_nsys_analysis/: communication.py  summary.py
.github/container/jax_nsys/tests/: test_basics.py  test_example_program.py
.github/container/nsys_jax/: MANIFEST.in  pyproject.toml
.github/container/nsys_jax/nsys_jax/: __init__.py  analysis.py  data_loaders.py  protobuf.py  protobuf_utils.py  utils.py  visualization.py
.github/container/nsys_jax/nsys_jax/analyses/: Analysis.ipynb  communication.py  pgle_costs.py  summary.py
.github/container/nsys_jax/nsys_jax/scripts/: install_flamegraph.py  install_protoc.py  jax_nccl_test.py  nsys_jax.py  nsys_jax_combine.py  patch_nsys.py  utils.py
.github/container/nsys_jax/tests/: cuda_profiler_api.py  example.hlo  multi_process_program.py  overlap_program.py  test_basics.py  test_df_helpers.py  test_example_program.py  test_exit_code_handling.py  test_hlo_program.py  test_jax_nccl_test.py  test_multi_process_program.py  test_overlap_program.py
.github/container/nsys_jax/tests/nsys_jax_test_helpers/: __init__.py
.github/triage/: pyproject.toml  triage
.github/triage/jax_toolbox_triage/: args.py  bisect.py  candidate_image.py  container.py  container_factory.py  docker.py  local.py  logic.py  main.py  metric_classifier.py  pyxis.py  slurm_submit.py  summary.py  triage_tool.py  utils.py  versions.py
.github/triage/jax_toolbox_triage/data_files/: Dockerfile.triage-tool
.github/triage/tests/: test_arg_parsing.py  test_container_runtimes.py  test_metric_classifier.py  test_mocked_git_history.py  test_pyxis_backend.py  test_restart.py  test_slurm_submit.py  test_triage_history_bisection.py  test_triage_logic.py  test_triage_tool_class.py  test_utils.py
.github/triage/tests/mock_scripts/: Dockerfile  build-jax.sh  build-te.sh  installPACKAGE.sh  mock_plugin.py  sacct  sbatch  scancel  squeue  srun  test-case.sh
cuda-examples/: Makefile  (+16 more)
jax-inference-offloading/: .flake8  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pep517_backend.py  pyproject.toml  setup.py
jax-inference-offloading/dockerfile/: cuda_package_skiplist.py  oss.dockerfile
jax-inference-offloading/examples/: download_model.py  example-grpo-multinode.sh  example-grpo.sh  example-standalone.sh  example-transfer-multinode.sh  example-transfer.sh  requirements.in  rollout.py  trainer.py  trainer_grpo.py  trainer_standalone.py
jax-inference-offloading/examples/decoupled_asynchronous/: README.md  decoupled_async.sh  jax_controller.py  prompt_dispatcher.py  vllm_worker.py
jax-inference-offloading/examples/decoupled_synchronous/: README.md  decoupled_sync.sh  jax_controller.py  prompt_dispatcher.py  vllm_worker.py
jax-inference-offloading/examples/mappings/: llama3_1b_param_mapping.json  llama3_8b_param_mapping.json
jax-inference-offloading/examples/single_controller/: README.md  jax_worker.py  prompt_source.py  run_single_controller.sh  single_controller.py  vllm_worker.py
jax-inference-offloading/jax_inference_offloading/: __init__.py  session.py  timer.py
jax-inference-offloading/jax_inference_offloading/api/: .gitignore  __init__.py  controller.proto  message_broker.proto  param_mapping.proto  types.py  utils.py
jax-inference-offloading/jax_inference_offloading/controller/: client_base.py  gateway.py  rollout_client.py  spmd.py  trainer_client.py  utils.py
jax-inference-offloading/jax_inference_offloading/engines/: __init__.py  vllm_engine.py  vllm_rollout_accumulator.py  vllm_rollout_engine.py  vllm_rollout_requester.py  vllm_transfer_engine.py
jax-inference-offloading/jax_inference_offloading/integrations/: __init__.py
jax-inference-offloading/jax_inference_offloading/integrations/simple/: __init__.py
jax-inference-offloading/jax_inference_offloading/integrations/standalone/: model.py
jax-inference-offloading/jax_inference_offloading/integrations/tunix/: rollout.py
jax-inference-offloading/jax_inference_offloading/jax/: __init__.py
jax-inference-offloading/jax_inference_offloading/models/: __init__.py  auto.py  checkpoint.py  gemma.py  gemma3.py  llama3.py  mapping_util.py
jax-inference-offloading/jax_inference_offloading/sharding/: __init__.py  mesh.py  util.py
jax-inference-offloading/jax_inference_offloading/transport/: __init__.py
jax-inference-offloading/jax_inference_offloading/transport/model/: nccl_fused.py  nccl_grouped.py  nccl_unfused.py
jax-inference-offloading/jax_inference_offloading/transport/tensor/: __init__.py  nccl_base.py  nccl_star.py
jax-inference-offloading/jax_inference_offloading/tunix/: load_model.py  rollout.py
jax-inference-offloading/jax_inference_offloading/vllm/: __init__.py  extension.py  llm.py
jax-inference-offloading/tests/: conftest.py  gpu_test_utils.py  test_async_roundtrip.py  test_gpu_grouped_transfer_correctness.py  test_handshake.py  test_load_model.py  test_rollout_accumulator.py  test_single_controller.py  test_sync_roundtrip.py
(+832 files in other folders)
