[build-system]
requires = [
  "setuptools>=69",
  "wheel",
  "grpcio-tools==1.76.*",
  "protobuf==6.33.*"
]
build-backend = "pep517_backend"
backend-path = ["."]

[tool.ruff]
indent-width = 2
line-length  = 108

exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv",
  "notebooks",
]

[tool.ruff.lint]
select = [
  "E",           # pycodestyle errors
  "W",           # pycodestyle warnings
  "F",           # pyflakes
  "B",           # flake8-bugbear
  "D",           # pydocstyle
  "I",           # isort import ordering
]

# Ignore stylistic edge-cases
ignore = ["E203"] 

# File-specific relaxations
per-file-ignores = { "__init__.py" = ["F401"], "tests/*" = ["D"] }
