[project]
name = "jax-toolbox-triage"
dynamic = ["version"]
dependencies = [
    "psutil",
]
# Because this script needs to run on compute clusters *outside* the containers that it
# orchestrates, it tries to tolerate old Python versions
requires-python = ">= 3.8"
[project.scripts]
jax-toolbox-triage = "jax_toolbox_triage:main"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.15.8",
    "types-psutil>=6.1.0.20241221",
]
