[project]
name = "jax-toolbox-triage"
dynamic = ["version"]
dependencies = [
    "numpy",
    "psutil",
    "uncertainties",
]
# Because this script needs to run on compute clusters *outside* the containers that it
# orchestrates, it tries to tolerate old Python versions: the floor is the oldest
# version still receiving security fixes (3.8 and 3.9 are EOL as of 2026)
requires-python = ">= 3.10"
[project.scripts]
jax-toolbox-triage = "jax_toolbox_triage:main"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.15.8",
    "types-psutil>=6.1.0.20241221",
]

[[tool.mypy.overrides]]
module = ["uncertainties.*"]
follow_untyped_imports = true
