[project]
name = "nsys-jax"
dynamic = ["version"]
dependencies = [
  "cuda-python",
  "jax",
  "ipython",
  "numpy",
  "pandas",
  "protobuf", # a compatible version of protoc needs to be installed out-of-band
  "pyarrow",
  "requests", # for install-protoc
  "uncertainties", # communication analysis recipe
  "prettytable",
]
requires-python = ">= 3.12"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
jupyter = [
  "jupyterlab",
  "matplotlib"
]
test = [
  "portpicker",
  "psutil",
  "pytest"
]

[project.scripts]
install-flamegraph  = "nsys_jax.scripts.install_flamegraph:main"
install-protoc      = "nsys_jax.scripts.install_protoc:main"
jax-nccl-test       = "nsys_jax.scripts.jax_nccl_test:main"
nsys-jax            = "nsys_jax.scripts.nsys_jax:main"
nsys-jax-combine    = "nsys_jax.scripts.nsys_jax_combine:main"
nsys-jax-patch-nsys = "nsys_jax.scripts.patch_nsys:main"

[tool.setuptools_scm]
root = "../../.." # .github/container/nsys_jax
# written into the git checkout in case of an editable installation
version_file = "nsys_jax/version.py"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "ruff>=0.15.11",
    "types-portpicker>=1.6.0.20260408",
    "types-protobuf>=7.34.1.20260408",
    "types-psutil>=7.2.2.20260408",
    "types-requests>=2.33.0.20260408",
]
