[project]
name = "jax-nsys"
dynamic = ["version"]
dependencies = [
  "ipython",
  "numpy",
  "pandas",
  "protobuf", # a compatible version of protoc needs to be installed out-of-band
  "pyarrow",
  "requests", # for install-protoc
  "uncertainties", # communication analysis recipe
]
requires-python = ">= 3.10"
[project.optional-dependencies]
test = [
  "pytest"
]
[project.scripts]
install-protoc      = "jax_nsys.scripts.install_protoc:main"
nsys-jax            = "jax_nsys.scripts.nsys_jax:main_profile"
nsys-jax-combine    = "jax_nsys.scripts.nsys_jax:main_combine"
nsys-jax-patch-nsys = "jax_nsys.scripts.patch_nsys:main"
